[package]
name = "data_interconverter_wasm"
version = "0.1.3" 
edition = "2021"
authors = ["Your Name <youremail@example.com>"] # TODO: Replace
description = "WASM core for data interconversion, including V1 JSON instruction execution."
# repository = "https://github.com/yourusername/your-repo-name"
# license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.69"
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ['console'] }

num-bigint = "0.4"
num-traits = "0.2"
anyhow = "1.0"
lazy_static = "1.4.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

serde = { version = "1.0", features = ["derive"] } 
serde-wasm-bindgen = "0.4.5" 
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.26"

[features]
default = ["console_error_panic_hook"]

# [profile.release]
# opt-level = 's'
# lto = true